fix: links visible again

--- a/style/default.css
+++ b/style/default.css
@@ -38,7 +38,7 @@ body {
 .issue1 {
     width: 100%;
     max-width: 600px;
-    margin: 0 auto;
+    margin: 50px auto;
 }
 
 .issue_content {
